--- a/books/Storyboards/SearchBooksEmptyDataset.xib
+++ b/books/Storyboards/SearchBooksEmptyDataset.xib
@@ -15,14 +15,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🔍 Search Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-oO-OTM">
-                    <rect key="frame" x="16" y="16" width="343" height="43"/>
-                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="16" y="16" width="343" height="33.5"/>
+                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="29"/>
+                    <color key="textColor" red="0.2274509804" green="0.2274509804" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type anything to start searching: a title, an author, an ISBN - or a mixture!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-K1-ihI">
-                    <rect key="frame" x="16" y="79" width="343" height="42.5"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                    <rect key="frame" x="16" y="72" width="343" height="41.5"/>
+                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="18"/>
                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -32,15 +32,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Wvj-q8-JKE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7rd-dV-7co"/>
-                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="Pxj-g8-Lbm"/>
-                <constraint firstItem="Wvj-q8-JKE" firstAttribute="top" secondItem="MDN-K1-ihI" secondAttribute="bottom" constant="60" id="Ybd-Vn-weR"/>
-                <constraint firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" constant="16" id="aJ6-bB-Rc9"/>
-                <constraint firstItem="l4p-oO-OTM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="iwa-qD-3dR"/>
-                <constraint firstItem="MDN-K1-ihI" firstAttribute="leading" secondItem="l4p-oO-OTM" secondAttribute="leading" id="khn-FA-izm"/>
-                <constraint firstAttribute="bottom" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="kpa-LL-S47"/>
-                <constraint firstItem="MDN-K1-ihI" firstAttribute="top" secondItem="l4p-oO-OTM" secondAttribute="bottom" constant="20" id="mkM-OX-uIR"/>
-                <constraint firstItem="MDN-K1-ihI" firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" id="xYx-GG-ucI"/>
+                <constraint firstItem="MDN-K1-ihI" firstAttribute="leading" secondItem="l4p-oO-OTM" secondAttribute="leading" id="7bl-JS-XMA"/>
+                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="IwK-lj-SCz"/>
+                <constraint firstAttribute="bottom" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="N7O-Gs-xlm"/>
+                <constraint firstItem="Wvj-q8-JKE" firstAttribute="top" secondItem="MDN-K1-ihI" secondAttribute="bottom" constant="68" id="TS2-Rh-LOM"/>
+                <constraint firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" constant="16" id="Zj0-Xg-9LS"/>
+                <constraint firstItem="l4p-oO-OTM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="bsc-rY-QOY"/>
+                <constraint firstItem="MDN-K1-ihI" firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" id="d6f-dn-6xt"/>
+                <constraint firstItem="Wvj-q8-JKE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="usY-Mw-96Q"/>
+                <constraint firstItem="MDN-K1-ihI" firstAttribute="top" secondItem="l4p-oO-OTM" secondAttribute="bottom" constant="22" id="xnN-hR-Ewp"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
